# GAIL-simulator

./: README.md  requirements.txt
GAIL_simulator_cpp/: .dockerignore  CMakeLists.txt  Dockerfile  Makefile  docker-compose.yml  setup.sh
GAIL_simulator_cpp/config/: simulation.yaml
GAIL_simulator_cpp/config/machines/: fireworkShow.yaml  giftShop.yaml
GAIL_simulator_cpp/config/players/: random_player.yaml  v1_player_cluster1.yaml
GAIL_simulator_cpp/scripts/: build.sh  docker-build.sh  quick-setup.sh  run.sh
GAIL_simulator_cpp/src/: main.cpp  simulation_engine.cpp  simulation_engine.h
GAIL_simulator_cpp/src/core/: config.cpp  config.h  data_writer.cpp  data_writer.h  memory_manager.cpp  memory_manager.h  session_controller.cpp  session_controller.h  task_distributor.cpp  task_distributor.h  thread_pool.cpp  thread_pool.h  types.cpp  types.h
GAIL_simulator_cpp/src/machines/: machine_factory.cpp  machine_factory.h  machine_interface.h  paytable.cpp  paytable.h  reel.cpp  reel.h  slot_machine.cpp  slot_machine.h
GAIL_simulator_cpp/src/players/: base_player.cpp  base_player.h  player_factory.cpp  player_factory.h  player_interface.h
GAIL_simulator_cpp/src/players/ml_interface/: libtorch_wrapper.cpp  libtorch_wrapper.h  model_loader.cpp  model_loader.h  pickle_loader.cpp  pickle_loader.h
GAIL_simulator_cpp/src/players/models/random/: random_player.cpp  random_player.h
GAIL_simulator_cpp/src/players/models/v1/: v1_data_processor.cpp  v1_data_processor.h  v1_model_loader.cpp  v1_model_loader.h  v1_player.cpp  v1_player.h
GAIL_simulator_cpp/src/utils/: file_utils.cpp  file_utils.h  logger.h  random_generator.cpp  random_generator.h  timer.cpp  timer.h
GAIL_simulator_py/: .gitignore
GAIL_simulator_py/docs/: class_diagram.md
GAIL_simulator_py/src/: foo.py  main.py
GAIL_simulator_py/tests/: test.ipynb  test_default_slot_spin.py  test_full_simulation.py  test_reel.py  test_slot_simulation.py  test_win2.py  test_win_eval.py
docs/: configuration.md
src/: foo.py  main.py
tests/: test_MC.py  test_rng.py  test_simple_session.py  test_slot.py
(+95 files in other folders)
